Fix API spacing

--- a/docs/css/base.css
+++ b/docs/css/base.css
@@ -16,3 +16,7 @@
     margin-bottom: 1in;
     margin-left: 0in;
 }
+
+.md-typeset h2 {
+    line-height: 0.9;
+}
